--- a/index.html
+++ b/index.html
@@ -4,55 +4,24 @@
   <meta charset="UTF-8">
   <title>Countdown ⏳</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      background: #000;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-family: sans-serif;
-    }
-
-    #countdown {
-      font-size: 6rem;
-      font-weight: bold;
-    }
-
-    audio {
-      display: none; /* ✅ Hide audio player */
-    }
-  </style>
 </head>
 <body>
-
-  <div id="countdown">10</div>
-
-  <!-- ✅ Hidden audio element playing in background -->
-  <audio 
-    id="background-audio" 
-    src="https://raw.githubusercontent.com/AK02-git/HBD-Bacha-site/main/audio1.mp3" 
-    autoplay 
-    loop>
-  </audio>
-
+  <div id="countdown" style="font-size:6rem; font-weight:bold; color:#fff;">10</div>
+  
   <script>
     let count = 10;
     const countdownElement = document.getElementById("countdown");
-
     const timer = setInterval(() => {
       count--;
       if (count >= 0) {
         countdownElement.textContent = count;
-      } else {
+      }
+      if (count < 0) {
         clearInterval(timer);
         window.location.href = "page2.html";
       }
     }, 1000);
   </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
