--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <audio id="bg-music" autoplay loop>
+  <source src="audio1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
   <div id="countdown" style="font-size:6rem; font-weight:bold; color:#fff;">10</div>
   
   <script>
