--- a/page2.html
+++ b/page2.html
@@ -76,6 +76,10 @@
   </style>
 </head>
 <body>
+  <audio id="bg-music" autoplay loop>
+  <source src="audio1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
   <section>
     <h1>🎂 Happy Birthday My Love 🎂</h1>
     <h2>Wishing you endless happiness, smiles <br> and love today and always 💖</h2>
