--- a/page3.html
+++ b/page3.html
@@ -105,6 +105,10 @@
   </style>
 </head>
 <body>
+  <audio id="bg-music" autoplay loop>
+  <source src="audio1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
   <div class="card">
     <h2>My Dearest Love ❤️</h2>
     <section>
