--- a/index.html
+++ b/index.html
@@ -3,30 +3,102 @@
 <head>
   <meta charset="UTF-8">
   <title>Countdown ⏳</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      font-family: 'Poppins', sans-serif;
+      overflow: hidden;
+    }
+
+    /* Teddy overlay */
+    #startScreen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(255,255,255,0.9);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 1000;
+      text-align: center;
+    }
+
+    #startScreen img {
+      width: 200px;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+    }
+    #startScreen img:hover {
+      transform: scale(1.1);
+    }
+    #startText {
+      font-size: 1.5rem;
+      margin-top: 15px;
+      color: #ff4d6d;
+      font-weight: bold;
+    }
+
+    /* Countdown */
+    #countdown {
+      font-size: 6rem;
+      font-weight: bold;
+      color: #fff;
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+      display: none;
+    }
+  </style>
 </head>
 <body>
-  <audio id="bg-music" autoplay loop>
-  <source src="audio1.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+  <!-- Background Music -->
+  <audio id="bg-music" loop>
+    <source src="audio1.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 
-  <div id="countdown" style="font-size:6rem; font-weight:bold; color:#fff;">10</div>
-  
+  <!-- Start Screen -->
+  <div id="startScreen">
+    <img src="teddy1.webp" alt="Tap Teddy">  <!-- apna teddy bear image use karo -->
+    <div id="startText">💖 Tap Teddy to Start 💖</div>
+  </div>
+
+  <!-- Countdown -->
+  <div id="countdown">10</div>
+
   <script>
-    let count = 10;
-    const countdownElement = document.getElementById("countdown");
-    const timer = setInterval(() => {
-      count--;
-      if (count >= 0) {
-        countdownElement.textContent = count;
-      }
-      if (count < 0) {
-        clearInterval(timer);
-        window.location.href = "page2.html";
-      }
-    }, 1000);
+    const music = document.getElementById("bg-music");
+    const startScreen = document.getElementById("startScreen");
+    const countdownEl = document.getElementById("countdown");
+
+    document.querySelector("#startScreen img").addEventListener("click", () => {
+      // Start music
+      music.play();
+
+      // Hide teddy screen
+      startScreen.style.display = "none";
+
+      // Show countdown
+      countdownEl.style.display = "block";
+
+      // Start countdown
+      let count = 10;
+      countdownEl.textContent = count;
+      const timer = setInterval(() => {
+        count--;
+        if (count >= 0) {
+          countdownEl.textContent = count;
+        }
+        if (count < 0) {
+          clearInterval(timer);
+          window.location.href = "page2.html"; // Go to next page
+        }
+      }, 1000);
+    });
   </script>
-  <script src="script.js"></script>
 </body>
 </html>
