--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
   <div class="heart" style="left:50%; animation-delay:4s;"></div>
   <div class="heart" style="left:70%; animation-delay:1s;"></div>
   <div class="heart" style="left:90%; animation-delay:3s;"></div>
-
+  
   <!-- Start Screen -->
-  <div id="startScreen">
-    <img id="teddy" src="teddy1.webp" alt="Tap Teddy"> <!-- Apna teddy image -->
-    <div id="tapText">💖 Tap Here 💖</div>
-  </div>
+<div id="startScreen">
+  <img id="teddy" src="https://i.ibb.co/Tk6rSJK/teddy-heart.png" alt="Tap Teddy">
+  <div id="tapText">💖 Tap Here 💖</div>
+</div>
 
   <!-- Countdown -->
   <div id="countdown">10</div>
