--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   
   <!-- Start Screen -->
 <div id="startScreen">
-  <img id="teddy" src="https://i.ibb.co/Tk6rSJK/teddy-heart.png" alt="Tap Teddy">
+  <img id="teddy" src="teddy.webp" alt="Tap Teddy">
   <div id="tapText">💖 Tap Here 💖</div>
 </div>
 
