--- a/index.html
+++ b/index.html
@@ -4,18 +4,31 @@
   <meta charset="UTF-8">
   <title>Countdown ⏳</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;700&display=swap');
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      background: linear-gradient(270deg, #ff9a9e, #fad0c4, #fbc2eb, #a6c1ee);
+      background-size: 800% 800%;
       font-family: 'Poppins', sans-serif;
       overflow: hidden;
+      animation: backgroundFlow 15s ease infinite;
     }
 
-    /* Floating hearts animation */
+    @keyframes backgroundFlow {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     .heart {
       position: absolute;
       width: 25px;
@@ -24,13 +37,13 @@
       animation: floatUp 6s linear infinite;
       opacity: 0.7;
     }
+
     @keyframes floatUp {
       from { transform: translateY(100vh) scale(0.6); opacity: 0; }
       50% { opacity: 1; }
       to { transform: translateY(-10vh) scale(1.2); opacity: 0; }
     }
 
-    /* Start Screen */
     #startScreen {
       position: fixed;
       top: 0; left: 0;
@@ -39,105 +52,4 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      z-index: 1000;
-      text-align: center;
-    }
-
-    .teddy-wrapper {
-      position: relative;
-      display: inline-block;
-    }
-
-    .teddy-wrapper img {
-      width: 250px;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-    .teddy-wrapper img:hover {
-      transform: scale(1.05);
-    }
-
-    /* Tap text inside heart */
-    #tapText {
-      position: absolute;
-      bottom: 28%; /* teddy ke heart ke approx position */
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 1.3rem;
-      font-weight: bold;
-      color: white;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
-      animation: pulse 1.5s infinite;
-      pointer-events: none; /* taaki click teddy par ho */
-    }
-
-    @keyframes pulse {
-      0% { transform: translateX(-50%) scale(1); }
-      50% { transform: translateX(-50%) scale(1.2); }
-      100% { transform: translateX(-50%) scale(1); }
-    }
-
-    /* Countdown */
-    #countdown {
-      font-size: 6rem;
-      font-weight: bold;
-      color: #fff;
-      text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-      display: none;
-    }
-  </style>
-</head>
-<body>
-  <!-- Background Music -->
-  <audio id="bg-music" loop>
-    <source src="audio1.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-
-  <!-- Floating hearts (multiple) -->
-  <div class="heart" style="left:10%; animation-delay:0s;"></div>
-  <div class="heart" style="left:30%; animation-delay:2s;"></div>
-  <div class="heart" style="left:50%; animation-delay:4s;"></div>
-  <div class="heart" style="left:70%; animation-delay:1s;"></div>
-  <div class="heart" style="left:90%; animation-delay:3s;"></div>
-
-  <!-- Start Screen -->
-  <div id="startScreen">
-    <div class="teddy-wrapper">
-      <img id="teddy" src="teddy.png" alt="Tap Teddy">
-      <div id="tapText">💖 Tap Here 💖</div>
-    </div>
-  </div>
-
-  <!-- Countdown -->
-  <div id="countdown">10</div>
-
-  <script>
-    const music = document.getElementById("bg-music");
-    const startScreen = document.getElementById("startScreen");
-    const countdownEl = document.getElementById("countdown");
-
-    document.getElementById("teddy").addEventListener("click", () => {
-      if (music.paused) {
-        music.play();
-      }
-
-      startScreen.style.display = "none";
-      countdownEl.style.display = "block";
-
-      let count = 10;
-      countdownEl.textContent = count;
-      const timer = setInterval(() => {
-        count--;
-        if (count >= 0) {
-          countdownEl.textContent = count;
-        }
-        if (count < 0) {
-          clearInterval(timer);
-          window.location.href = "page2.html";
-        }
-      }, 1000);
-    });
-  </script>
-</body>
-</html>
+      z-index:
