--- a/index.html
+++ b/index.html
@@ -2,120 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Countdown ⏳</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;700&display=swap');
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(270deg, #ff9a9e, #fad0c4, #fbc2eb, #a6c1ee);
-      background-size: 800% 800%;
-      font-family: 'Poppins', sans-serif;
-      overflow: hidden;
-      animation: backgroundFlow 15s ease infinite;
-    }
-
-    @keyframes backgroundFlow {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .heart {
-      position: absolute;
-      width: 25px;
-      height: 25px;
-      background: url('https://cdn-icons-png.flaticon.com/512/833/833472.png') no-repeat center/cover;
-      animation: floatUp 6s linear infinite;
-      opacity: 0.7;
-    }
-
-    @keyframes floatUp {
-      from { transform: translateY(100vh) scale(0.6); opacity: 0; }
-      50% { opacity: 1; }
-      to { transform: translateY(-10vh) scale(1.2); opacity: 0; }
-    }
-
-    #startScreen {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      z-index: 1000;
-      text-align: center;
-    }
-
-    .teddy-wrapper {
-      position: relative;
-      display: inline-block;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-      border-radius: 20px;
-    }
-
-    .teddy-wrapper img {
-      width: 260px;
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      filter: drop-shadow(0 4px 10px rgba(0,0,0,0.2));
-    }
-
-    .teddy-wrapper img:hover {
-      transform: scale(1.07);
-      filter: drop-shadow(0 6px 15px rgba(255, 105, 180, 0.5));
-    }
-
-    #tapText {
-      position: absolute;
-      bottom: 28%;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: white;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
-      animation: pulse 1.5s infinite;
-      pointer-events: none;
-    }
-
-    @keyframes pulse {
-      0% { transform: translateX(-50%) scale(1); }
-      50% { transform: translateX(-50%) scale(1.2); }
-      100% { transform: translateX(-50%) scale(1); }
-    }
-
-    #countdown {
-      font-size: 6rem;
-      font-weight: bold;
-      color: #fff;
-      display: none;
-      text-shadow: 3px 3px 20px rgba(0, 0, 0, 0.3);
-      animation: bounceIn 1s ease forwards;
-    }
-
-    @keyframes bounceIn {
-      0% { transform: scale(0.5); opacity: 0; }
-      60% { transform: scale(1.2); opacity: 1; }
-      100% { transform: scale(1); }
-    }
-
-    /* Extra floating hearts */
-    .heart:nth-child(1) { left: 10%; animation-delay: 0s; }
-    .heart:nth-child(2) { left: 25%; animation-delay: 2s; }
-    .heart:nth-child(3) { left: 40%; animation-delay: 1s; }
-    .heart:nth-child(4) { left: 60%; animation-delay: 3s; }
-    .heart:nth-child(5) { left: 80%; animation-delay: 1.5s; }
-  </style>
+  <title>💖 Countdown Surprise 💖</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -125,39 +15,52 @@
     Your browser does not support the audio element.
   </audio>
 
-  <!-- Floating Hearts -->
-  <div class="heart"></div>
-  <div class="heart"></div>
-  <div class="heart"></div>
-  <div class="heart"></div>
-  <div class="heart"></div>
-
-  <!-- Start Screen -->
-  <div id="startScreen">
+  <!-- 🌸 Start Screen -->
+  <div id="startScreen" style="text-align: center;">
     <div class="teddy-wrapper">
-      <img id="teddy" src="teddy.png" alt="Tap the Teddy">
-      <div id="tapText">💖 Tap Here 💖</div>
+      <img id="teddy" src="teddy.png" alt="Teddy Bear" style="width: 260px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.3); transition: transform 0.3s;">
+      <div id="tapText" style="
+        position: relative;
+        margin-top: -40px;
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: white;
+        text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
+        animation: pulse 1.5s infinite;
+      ">
+        💖 Tap Me 💖
+      </div>
     </div>
+    <p style="margin-top: 20px; font-size: 1.1rem;">A surprise awaits 🎁</p>
   </div>
 
-  <!-- Countdown Display -->
-  <div id="countdown">10</div>
+  <!-- ⏳ Countdown -->
+  <div id="countdown" style="display: none; font-size: 6rem; font-weight: bold; color: #fff; text-shadow: 2px 2px 10px rgba(0,0,0,0.3); animation: bounceIn 1s ease forwards;"></div>
 
+  <!-- 🌟 Script Files -->
+  <script src="script.js"></script>
   <script>
     const music = document.getElementById("bg-music");
     const startScreen = document.getElementById("startScreen");
     const countdownEl = document.getElementById("countdown");
+    const teddy = document.getElementById("teddy");
 
-    document.getElementById("teddy").addEventListener("click", () => {
+    teddy.addEventListener("click", () => {
+      // Play music
       if (music.paused) {
-        music.play().catch(e => console.warn("Audio play blocked:", e));
+        music.play().catch(e => console.warn("Autoplay error:", e));
       }
 
+      // Launch confetti
+      launchConfetti();
+
+      // Hide teddy & show countdown
       startScreen.style.display = "none";
       countdownEl.style.display = "block";
 
       let count = 10;
       countdownEl.textContent = count;
+
       const timer = setInterval(() => {
         count--;
         if (count >= 0) {
@@ -165,9 +68,13 @@
         }
         if (count < 0) {
           clearInterval(timer);
+
+          // Smooth fade out before redirect
           document.body.style.transition = "opacity 1s ease";
           document.body.style.opacity = 0;
-          setTimeout(() => window.location.href = "page2.html", 1000);
+          setTimeout(() => {
+            window.location.href = "page2.html";
+          }, 1000);
         }
       }, 1000);
     });
